[package]
name = "onchain-tests-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gear-ot"
path = "src/main.rs"

[dependencies]
gcli = { git = "https://github.com/gear-tech/gear.git"}
gsdk = { git = "https://github.com/gear-tech/gear.git"}
sp-core = { git = "https://github.com/gear-tech/substrate.git", branch = "gear-polkadot-v1.0.0-canary", default-features = false }
color-eyre = "0.6.2"
tokio = { version = "1.33.0" }
log = { version = "0.4.20", default-features = false }
clap = { version = "4.4.7" }
env_logger = "0.10"
onchain-test-types = { path = "../service/types" }
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
wasmtime = "*"
onchain-test-service = { path = "../service" }
