[package]
name = "dummy-wasm"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git"}
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
hashbrown = "*"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git"}
anyhow = "*"
pwasm-utils = "0.19.0"

[features]
debug = ["gstd/debug"]
default = ["std"]
std = []

[patch.crates-io]
parity-wasm = { version = "0.45.0", git = "https://github.com/gear-tech/parity-wasm", branch = "v0.45.0-sign-ext" }
