[package]
name = "dummy-wasm"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git"}
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
hashbrown = "*"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
gear-core = { git = "https://github.com/gear-tech/gear.git" }
anyhow = "*"
pwasm-utils = { git = "http://github.com/nikvolf/wasm-utils", features = ["sign_ext"] }
wasm-test-extractor = { path = "../extractor" }

[features]
debug = ["gstd/debug"]
default = ["std"]
std = []

[patch.crates-io]
parity-wasm = { version = "0.45.0", git = "https://github.com/gear-tech/parity-wasm", branch = "v0.45.0-sign-ext" }
