[package]
name = "dummy-wasm"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git"}
gear-test-codegen = { path = "../test-runtime/codegen" }
gear-test-runtime = { path = "../test-runtime" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
gear-core = { git = "https://github.com/gear-tech/gear.git" }
anyhow = "1"
pwasm-utils = { git = "http://github.com/nikvolf/wasm-utils", features = ["sign_ext"] }
wasm-test-extractor = { path = "../extractor" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git"}

[features]
debug = ["gstd/debug"]
default = ["std"]
std = []
