[package]
name = "example"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git"}
gear-test-codegen = { path = "../test-runtime/codegen" }
gear-test-runtime = { path = "../test-runtime" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git"}

[build-dependencies]
gear-ext-builder = { path = "../test-builder" }
