[package]
name = "onchain-test-service"
version = "0.1.0"
build = "build.rs"
edition = "2018"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git"}
gcore = { git = "https://github.com/gear-tech/gear.git"}
gsys = { git = "https://github.com/gear-tech/gear.git" }
parity-scale-codec = { version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }
hashbrown = "0.13"
async-trait = "*"
onchain-test-types = { path = "./types" }
sails-macros = { git = "https://github.com/gear-tech/sails", branch = "dd/service" }
sails-service = { git = "https://github.com/gear-tech/sails", branch = "dd/service" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git"}

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git"}
hex-literal = "*"

[features]
handlers = []
debug = ["gstd/debug"]
default = ["std", "handlers"]
std = []
