[package]
name = "onchain-test-service"
version = "0.1.0"
build = "build.rs"
edition = "2018"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "nv-add-pre-processor-in-builder" }
gcore = { git = "https://github.com/gear-tech/gear.git", branch = "nv-add-pre-processor-in-builder" }
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }
hashbrown = "0.13"
async-trait = "*"
onchain-test-types = { path = "./types" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "nv-add-pre-processor-in-builder" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "nv-add-pre-processor-in-builder" }
hex-literal = "*"

[features]
debug = ["gstd/debug"]
default = ["std"]
std = []
