[package]
name = "gear-test-runner"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gtest = { path = "../../gear/gtest" }
anyhow = "1.0"
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
gear-test-runtime = { path = "../test-runtime" }
colored = "*"

[[bin]]
name = "gtest"
path = "src/main.rs"
