[package]
name = "gear-test-runtime"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git"}
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[features]
debug = ["gstd/debug"]
