[package]
name = "onchain-test-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
gstd = { git = "https://github.com/gear-tech/gear.git" }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

[lib]
