[package]
name = "gear-test-codegen"
description = "Code generation library for the Gear tests runtime library"
keywords = ["gear", "codegen", "std"]
categories = ["api-bindings"]
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
gstd = { git = "http://github.com/gear-tech/gear" }
