[package]
name = "gear-test-codegen"
description = "Code generation library for the Gear tests runtime library"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
gstd = { git = "http://github.com/gear-tech/gear" }
